--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,18 @@
 :root {
   --background: #fff;
   --foreground: #171717;
+  color: rgb(165, 111, 10);
 }
 
 
 body {
-  background: var(--background);
+  background: #111827;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+*{
+  font-family: "Amiri", serif;
+  font-weight: 700;
+  font-style: bold;}
+
