--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 
 
 body {
-  background: #111827;
+  background: #2d2d2d;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -17,5 +17,6 @@ body {
   font-family: "Amiri", serif;
   font-weight: 700;
   
-  font-style: bold;}
+  font-style: bold;
+}
 
